Card/Legacy Card: IE11 styling fixes for overflow and card size
Legacy card styling was overflowing horizontally. Cards generally
were adding extra white space vertically. This fixes both so cards
in IE11 look the same as other browsers.

TEST=manual

Tested in Chrome, IE11 and Firefox.

--- a/src/ui/sass/modules/_LegacyCard.scss
+++ b/src/ui/sass/modules/_LegacyCard.scss
@@ -125,6 +125,11 @@
     width: 100%;
   }
 
+  &-info
+  {
+    flex-basis: 100%;
+  }
+
   &-infoCtasWrapper
   {
     display: flex;
